[project]
name = "teleprobe"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.12.15",
    "beautifulsoup4>=4.13.4",
    "dotenv>=0.9.9",
    "fastapi>=0.116.1",
    "lxml>=6.0.0",
    "pydantic>=2.0.0",
    "pymongo>=4.14.0",
    "python-dateutil>=2.9.0.post0",
    "requests>=2.32.4",
    "sqlalchemy>=2.0.42",
    "telethon>=1.40.0",
    "uvicorn[standard]>=0.35.0",
]
