[project]
name = "teleprobe"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4",
    "dotenv>=0.9.9",
    "fastapi>=0.116.1",
    "hdbscan",
    "matplotlib",
    "numpy",
    "protobuf",
    "pydantic>=2.0.0",
    "pymongo>=4.14.0",
    "python-dateutil>=2.9.0.post0",
    "scikit-learn",
    "sentence-transformers",
    "sentencepiece",
    "sqlalchemy>=2.0.42",
    "telethon>=1.40.0",
    "torch",
    "transformers",
    "umap-learn",
    "uvicorn[standard]>=0.35.0",
]
