[project]
name = "teleprobe"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [

    "aiohttp>=3.12.15",
    "aiosqlite>=0.21.0",
    "beautifulsoup4>=4.13.4",
    "celery>=5.3",
    "celery-types>=0.23.0",
    "dotenv>=0.9.9",
    "fastapi>=0.116.1",
    "flower>=2.0.1",
    "google-genai>=1.30.0",
    "kombu>=5.5.4",
    "langchain-google-genai>=2.1.9",
    "lxml>=6.0.0",
    "pydantic>=2.0.0",
    "pymongo>=4.14.0",
    "python-dateutil>=2.9.0.post0",
    "requests>=2.32.4",
    "numpy",
    "scikit-learn",
    "sentence-transformers",
    "sentencepiece",
    "hdbscan",
    "python-dateutil>=2.9.0.post0",
    "matplotlib",
    "sqlalchemy>=2.0.42",
    "telethon>=1.40.0",
    "torch",
    "transformers",
    "umap-learn",
    "uvicorn[standard]>=0.35.0",
]
